{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 90,
  "lineage": "ec1fa115-357d-663d-148b-3fb348e67db2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:security-group/sg-0f47365ba029bba47",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f47365ba029bba47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "996099991636",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "sg-0f47365ba029bba47",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:security-group/sg-0e4e49d837364a94e",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4e49d837364a94e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-node-sg",
            "name_prefix": "",
            "owner_id": "996099991636",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "sg-0e4e49d837364a94e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:network-acl/acl-0dd1ca79c5fa86ce9",
            "default_network_acl_id": "acl-0dd1ca79c5fa86ce9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0dd1ca79c5fa86ce9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "996099991636",
            "region": "ap-southeast-1",
            "subnet_ids": [
              "subnet-05c6954e439495677",
              "subnet-05f825865584a0141",
              "subnet-0a7282e72acbc7930",
              "subnet-0f405342e52607265"
            ],
            "tags": {
              "Name": "blogging-app-vpc-default"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-default"
            },
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:route-table/rtb-0431e1fc3a71c0041",
            "default_route_table_id": "rtb-0431e1fc3a71c0041",
            "id": "rtb-0431e1fc3a71c0041",
            "owner_id": "996099991636",
            "propagating_vgws": null,
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "blogging-app-vpc-default"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:security-group/sg-0810425ee379d7008",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0810425ee379d7008",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "996099991636",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blogging-app-vpc-default"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-default"
            },
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8d59fb5b20fdb2e",
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:elastic-ip/eipalloc-0d8d59fb5b20fdb2e",
            "domain": "vpc",
            "id": "eipalloc-0d8d59fb5b20fdb2e",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-74-83-241.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.83.241",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "blogging-app-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-ap-southeast-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:internet-gateway/igw-01cd5bd5590169457",
            "id": "igw-01cd5bd5590169457",
            "owner_id": "996099991636",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "blogging-app-vpc"
            },
            "tags_all": {
              "Name": "blogging-app-vpc"
            },
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8d59fb5b20fdb2e",
            "association_id": "eipassoc-06062bcb63da81518",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0aa89a0ad19ebe21c",
            "network_interface_id": "eni-023553b16c9f44047",
            "private_ip": "10.0.1.206",
            "public_ip": "52.74.83.241",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f405342e52607265",
            "tags": {
              "Name": "blogging-app-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-ap-southeast-1a"
            },
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-021d03439da8ee67c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aa89a0ad19ebe21c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-021d03439da8ee67c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-021d03439da8ee67c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01cd5bd5590169457",
            "id": "r-rtb-046e0e2f9d2f1f7a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-046e0e2f9d2f1f7a1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-046e0e2f9d2f1f7a1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:route-table/rtb-021d03439da8ee67c",
            "id": "rtb-021d03439da8ee67c",
            "owner_id": "996099991636",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "blogging-app-vpc-private"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "rtb-021d03439da8ee67c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:route-table/rtb-046e0e2f9d2f1f7a1",
            "id": "rtb-046e0e2f9d2f1f7a1",
            "owner_id": "996099991636",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "blogging-app-vpc-public"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "rtb-046e0e2f9d2f1f7a1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a090f3261b4052f6",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-021d03439da8ee67c",
            "subnet_id": "subnet-0a7282e72acbc7930"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "rtbassoc-0a090f3261b4052f6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094530a8bedf22912",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-021d03439da8ee67c",
            "subnet_id": "subnet-05f825865584a0141"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "rtbassoc-094530a8bedf22912",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0414f738811ae0886",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-046e0e2f9d2f1f7a1",
            "subnet_id": "subnet-0f405342e52607265"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "rtbassoc-0414f738811ae0886",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c617d1d7e641314",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-046e0e2f9d2f1f7a1",
            "subnet_id": "subnet-05c6954e439495677"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "rtbassoc-09c617d1d7e641314",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:subnet/subnet-0a7282e72acbc7930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7282e72acbc7930",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "996099991636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "blogging-app-vpc-private-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-private-ap-southeast-1a"
            },
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "subnet-0a7282e72acbc7930",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:subnet/subnet-05f825865584a0141",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f825865584a0141",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "996099991636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "blogging-app-vpc-private-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-private-ap-southeast-1b"
            },
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "subnet-05f825865584a0141",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:subnet/subnet-0f405342e52607265",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f405342e52607265",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "996099991636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "blogging-app-vpc-public-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-public-ap-southeast-1a"
            },
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "subnet-0f405342e52607265",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:subnet/subnet-05c6954e439495677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c6954e439495677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "996099991636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "blogging-app-vpc-public-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "blogging-app-vpc-public-ap-southeast-1b"
            },
            "vpc_id": "vpc-07bfb248dddfe5dd6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "subnet-05c6954e439495677",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:996099991636:vpc/vpc-07bfb248dddfe5dd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dd1ca79c5fa86ce9",
            "default_route_table_id": "rtb-0431e1fc3a71c0041",
            "default_security_group_id": "sg-0810425ee379d7008",
            "dhcp_options_id": "dopt-087aa84c099b7d668",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07bfb248dddfe5dd6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0431e1fc3a71c0041",
            "owner_id": "996099991636",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "blogging-app-vpc"
            },
            "tags_all": {
              "Name": "blogging-app-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "996099991636",
            "id": "vpc-07bfb248dddfe5dd6",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}